--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -35,6 +35,10 @@ $big:26px;
 .md-font{
   font-size: $medium;
 }
+.sm-font{
+  font-size: 14px;
+}
+
 //mixins
 
 @mixin mx-auto {
@@ -73,4 +77,25 @@ body::-webkit-scrollbar {
   border:none;
   background: none;
   font-size: 1.3em;
+}
+
+.fit-content{
+  max-width:auto;
+  width: 354px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.tradeview-fit{
+  min-width: fit-content;
+  width: fit-content;
+  height: 620px;
+  margin: 0;
+  padding: 0;
+}
+.twitter-fit{
+  min-width: fit-content;
+  height:500px;
+  margin: 0 0 0 0;
+  padding: 0;
+  overflow: hidden;
 }
