--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../scss/_theme.scss";
+@import "../scss/components.scss";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;800&display=swap");
 body {
   background-color: #fafafa;
@@ -622,6 +623,7 @@ footer {
 }
 .card1 {
   background: #ffffff;
+  min-width: fit-content;
   width: fit-content;
   height: fit-content;
   box-shadow: 0px 14.5186px 40.8754pxrgba (0, 0, 0, 0.08);
@@ -629,7 +631,15 @@ footer {
   border: none;
   padding: 10px 15px;
   margin-bottom: 10px;
-
+  .desc-txt{
+    font-weight: 400;
+    font-size: 15px;
+    color: $grayish;
+    line-height: 24px;
+  }
+  @media (max-width:1835px) {
+    width: 100%;
+  }
   .btn-coin {
     @include btn-coin;
     min-width: 76px;
@@ -656,6 +666,7 @@ footer {
     }
     a{
       text-decoration: none;
+      color: $black;
     }
   }
   .coin-info {
@@ -672,5 +683,10 @@ footer {
       padding-bottom: 5px;
     }
     
+  }
+}
+@media (max-width:1449px) {
+  .w-btn{
+    width: 100% !important;
   }
 }
