--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -116,4 +116,6 @@ body::-webkit-scrollbar-thumb {
   margin: 0 0 0 0;
   padding: 0;
   overflow: hidden;
+  box-shadow: 0px 14.5186px 40.8754px rgba(0, 0, 0, 0.047);
+  border-radius: 7px;
 }
